# FastAPI-task

./: README.md  app.py  pyproject.toml  setup.sh
configurations/: config.py
database/: db.py
routes/: candidates.py  users.py
utils/: constants.py  openapi_tags_metadata.py
